--- a/index.html
+++ b/index.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spark'25</title>
+
+    <!-- Main Css -->
+    <link rel="stylesheet" href="./Asset/CSS/style.css">
+
+    <!-- Footer Css -->
+     <link rel="stylesheet" href="./Asset/CSS/footer.css">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/681f5c61c8.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <h1>bi</h1>
+    <header class="header" id="home">
+        <div class="header_content">
+            <p>International Conference on Smart Systems, Power Electronics Artificial Intelligence, Robotics and
+                Knowledge Engineering(SPARK'25)
+            </p>
+            <img src="./Asset/IMAGES/KPR main logo.webp" alt="">
+        </div>
+    </header>
+    <nav class="navbar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#services">Call for Papers</a></li>
+            <li><a href="#register">Speakers</a></li>
+            <li><a href="#schedule">Schedule</a></li>
+            <li class="dropdown-container">
+                <a href="#call-to-action">Call to Action &#x25BC;</a>
+                <div class="dropdown">
+                    <a href="#">Submit Paper</a>
+                    <a href="#">Register Now</a>
+                    <a href="#">Download Brochure</a>
+                    <a href="#">Workshops</a>
+                </div>
+            </li>
+            <li><a href="#contact">Contact Us</a></li>
+        </ul>
+        <div class="btn"><a href="#home">Register Now</a>
+        </div>
+    </nav>
+
+<!-- Pradeep -->
+
+    <div class="padding">
+        
+    </div>
+    <div class="container">
+        <div class="container-text">
+            <p>Date : 15 July 2025 and 16 July 2025</p>
+            <h1>International Conference on Smart Systems, Power Electronics Artificial Intelligence, Robotics and
+                Knowledge Engineering</h1>
+            <p>Department of Electrical and Electronics Engineering [EEE], Electronics and Communication Engineering [ECE]</p>
+        </div>
+        <div class="slider-container">
+
+            <div class="slider">
+                <div class="slide">
+                    <img src="./Asset/IMAGES/iron-man-marvel-superheroes-5k-8k-7680x4320-6209.jpg" alt="Image 1">
+                </div>
+                <div class="slide">
+                    <img src="./Asset/IMAGES/wp9063881-4k-hulk-and-thor-wallpapers.jpg" alt="Image 2">
+                </div>
+                <div class="slide">
+                    <img src="./Asset/IMAGES/wp9152334-marvel-avengers-4k-pc-wallpapers.jpg" alt="Image 3">
+                </div>
+                <div class="slide">
+                    <img src="./Asset/IMAGES/uwp4555575.jpeg" alt="Image 4">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="./designs/images/KPR learn beyond logo.png" alt="SPARK_2025 Logo">
+            </div>
+            <div class="footer-about">
+                <h3>About Us</h3>
+                <p>International Conference on Smart Systems, Power Electronics Artificial Intelligence, Robotics and
+                    Knowledge Engineering(SPARK'25)</p>
+            </div>
+            <div class="footer-services">
+                <h3>Services</h3>
+                <ul>
+                    <li><a href="#">Registration</a></li>
+                    <li><a href="#">Speakers</a></li>
+                    <li><a href="#">Call for Papers</a></li>
+                    <li><a href="#">Upcoming Sessions</a></li>
+                    <li><a href="#">Workshop</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Contact Us</h3>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-phone"></i></i></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-envelope"></i></i></a></li>
+                   
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <p>Copyright &copy; 2025 KPR Institute of Engineering and technology Developed by Team ZENITH</p>
+        </div>
+    </footer>
+
+    <!-- Script File -->
+    <script src="./Asset/JS/script.js"></script>
 </body>
 </html>
