--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
-                <img src="./designs/images/KPR learn beyond logo.png" alt="SPARK_2025 Logo">
+                <img src="./Asset/IMAGES/KPR learn beyond logo.png" alt="SPARK_2025 Logo">
             </div>
             <div class="footer-about">
                 <h3>About Us</h3>
