--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="./Asset/IMAGES/KPR main logo.webp" alt="">
         </div>
     </header>
-    <nav class="navbar">
+    <nav class="navbar" style="position: sticky; top: 0; z-index: 1000;">
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
@@ -33,7 +33,7 @@
             <li><a href="#register">Speakers</a></li>
             <li><a href="#schedule">Schedule</a></li>
             <li class="dropdown-container">
-                <a href="#call-to-action">Call to Action &#x25BC;</a>
+                <a href="#call-to-action">Call to Action<i class="fa-solid fa-angle-down"></i></a>
                 <div class="dropdown">
                     <a href="#">Submit Paper</a>
                     <a href="#">Register Now</a>
@@ -57,7 +57,7 @@
             <p>Date : 15 July 2025 and 16 July 2025</p>
             <h1>International Conference on Smart Systems, Power Electronics Artificial Intelligence, Robotics and
                 Knowledge Engineering</h1>
-            <p>Department of Electrical and Electronics Engineering [EEE], Electronics and Communication Engineering [ECE]</p>
+            <p>Department of Electrical and Electronics Engineering [EEE] and Electronics and Communication Engineering [ECE]</p>
         </div>
         <div class="slider-container">
 
@@ -73,6 +73,9 @@
                 </div>
                 <div class="slide">
                     <img src="./Asset/IMAGES/uwp4555575.jpeg" alt="Image 4">
+                </div>
+                <div class="slide">
+                    <img src="./Asset/IMAGES/iron-man-marvel-superheroes-5k-8k-7680x4320-6209.jpg" alt="Image 1">
                 </div>
             </div>
         </div>
@@ -110,7 +113,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <p>Copyright &copy; 2025 KPR Institute of Engineering and technology Developed by Team ZENITH</p>
+            <p>Copyright &copy; 2025 KPR Institute of Engineering and Technology Developed by Team ZENITH</p>
         </div>
     </footer>
 
